fix(dop): fix tabs not display when there is too much content

--- a/shell/app/modules/project/pages/release/components/form.scss
+++ b/shell/app/modules/project/pages/release/components/form.scss
@@ -19,4 +19,13 @@
     background-color: $color-default-04 !important;
     border: none;
   }
+
+  .ant-tabs {
+    display: flex;
+
+    .ant-tabs-content-holder {
+      flex: 1;
+      overflow: auto;
+    }
+  }
 }
